tests/snapshots/snapshots__pipeline@deriving_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/deriving_unknown.pr
---
== tokens ==
VOpen Class UIdent("Eq") LParen Ident("a") RParen VOpen Ident("eq") Colon LParen Ident("a") Comma Ident("a") RParen Arrow KwBool VClose VSemi Type UIdent("Foo") Eq UIdent("A") Bar UIdent("B") Deriving LParen UIdent("Eq") Comma UIdent("Monoid") RParen VSemi Fn Ident("main") LParen RParen Eq UIdent("A") VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Foo",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "A",
                    args: [],
                    fields: None,
                },
                Ctor {
                    name: "B",
                    args: [],
                    fields: None,
                },
            ],
            deriving: [
                (
                    "Eq",
                    62..64,
                ),
                (
                    "Monoid",
                    66..72,
                ),
            ],
            newtype: false,
            span: 35..73,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [
        ClassDecl {
            name: "Eq",
            param: "a",
            supers: [],
            methods: [
                (
                    "eq",
                    Fun(
                        [
                            Var(
                                "a",
                            ),
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Bool,
                    ),
                ),
            ],
            span: 0..33,
        },
    ],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Var(
                    "A",
                ),
                span: 87..88,
            },
            wheres: [],
            span: 75..88,
        },
    ],
}

== types ==
[E6017] Type Error: unknown class in deriving: Monoid
   ╭─[ <source>:4:32 ]
   │
 4 │ type Foo = A | B deriving (Eq, Monoid)
   │                                ───┬──  
   │                                   ╰──── unknown class in deriving: Monoid
───╯
